@@ -20,7 +20,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="#markers">Markers</A>
 <LI><A HREF="#alleles">Alleles</A>
 <LI><A HREF="#phenoannot">Phenotype Vocabulary Annotation</A>
-<LI><A HREF="#mlc">MLC</A>
 <LI><A HREF="#probes">Probes</A>
 <LI><A HREF="#mapping">Mapping</A>
 <LI><A HREF="#orthology">Orthology</A>
@@ -84,14 +83,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_MPObsolete.sql.rpt">Genotype Annotations to Obsolete MP Terms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_OMIMObsolete.sql.rpt">Genotype Annotations to Obsolete OMIM Terms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_MPDups.sql.rpt">Duplicate MP Annotations</A>
-</OL>
-
-<A NAME="mlc"><B>MLC</B></A>
-<OL>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_MLC_Withdrawn.sql.rpt">Withdrawn Markers w/ MLC Text</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MLC_Alleles.sql.rpt">MLC Symbols which contain Alleles</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MLC_References.sql.rpt">References which only appear in MLC</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MLCNomenclature-current.html">Updates to MLC Mouse Nomenclature</A>
 </OL>
 
 <A NAME="probes"><B>Probes</B></A>
