@@ -1,3 +1,10 @@
+TAG: qcreports_db-3-5-1-13
+DATE: 10/13/2006
+STAFF: lec
+CHANGES:
+1) TR7966/NOM_Triage.sql
+2) TR7958/GXD_Triage.sql
+
 TAG: qcreports_db-3-5-1-12
 TAG: qcreports_db-3-5-1-11
 DATE: 10/10/2006
